<resources>
    <string name="app_name" translatable="false">Audio Books</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="menu_audiobooks">Аудиокниги</string>
    <string name="menu_genre">Жанры</string>
    <string name="menu_artist">Исполнители</string>
    <string name="menu_autor">Авторы</string>
    <string name="menu_favorite">Избранное</string>
    <string name="menu_history">История</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_about">О программе</string>
    <string name="loading">Загрузка…</string>
    <string name="book_cover">обложка</string>
    <string name="error_load_data">Ошибка. Не удалось загрузить данные</string>
    <string name="error_display_data">Ошибка отображения данных</string>
    <string name="search">Поиск</string>
    <string name="order">Сортировка</string>
    <string name="new_data">Новое</string>
    <string name="reting">Рейтинг</string>
    <string name="all_time">За все время</string>
    <string name="in_month">За месяц</string>
    <string name="in_week">За неделю</string>
    <string name="popular">Популярное</string>
    <string name="order_new">Новое</string>
    <string name="order_reting">Рейтинг</string>
    <string name="order_popular">Популярное</string>
    <string name="open">Открыть</string>
    <string name="add_to_favorite">Добавить в избранное</string>
    <string name="open_author">Перейти к автору</string>
    <string name="open_genre">Перейти к жанру</string>
    <string name="open_artist">Перейти к исполнителю</string>
    <string name="open_series">Перейти к серии</string>
    <string name="remove_favorite">Удалить из избранного</string>
    <string name="remove">Удалить</string>
    <string name="title_activity_book" translatable="false">BookActivity</string>
    <string name="tab_text_1">Описание</string>
    <string name="tab_text_2">Комментарии</string>
    <string name="tab_text_3">Серия</string>
    <string name="tab_text_5">Другие источники</string>
    <string name="time_zero" translatable="false">00:00</string>
    <string name="previous">Предыдущий</string>
    <string name="play">Воспроизвести</string>
    <string name="next">Следуйщий</string>
    <string name="collapse">Свернуть</string>
    <string name="autor">Автор:</string>
    <string name="artist">Читает:</string>
    <string name="series">Серия:</string>
    <string name="show_more">Читать дальше</string>
    <string name="other_recomended_books">Рекомендуемые книги</string>
    <string name="try_again">Попробовать еще</string>
    <string name="show_less">Скрыть</string>
    <string name="share">Поделится</string>
    <string name="add_to_main_screen">Добавить на главный экран</string>
    <string name="refresh">Обновить</string>
    <string name="answers">Ответы</string>
    <string name="close">Закрыть</string>
    <string name="show_all_answer">Показать все ответы</string>
    <string name="rewind_10">назад на 10 секунд</string>
    <string name="forward_30">вперед на 30 секунд</string>
    <string name="speed">скорость</string>
    <string name="error_load_coments">Не удалось загрузить комментарии</string>
    <string name="error_load_books">Не удалось загрузить книги</string>
    <string name="in_day">За день</string>
    <string name="tab_text_4">Другие озвучки</string>
    <string name="file_not_dowland">Файл еще не загрузился полностью</string>
    <string name="notification_channel_name" translatable="false">channelId</string>
    <string name="no_comments">Комментарии отсутствуют</string>
    <string name="open_site">Открыть на сайте</string>
    <string name="worning_loading_not_finish">Данные загружены не до конца. Подождите.</string>
    <string name="title_set_speed_popup">Выберите скорость</string>
    <string name="setting_theme">Тема</string>
    <string name="theme_dark">Темная</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark_value" translatable="false">dark</string>
    <string name="theme_light_value" translatable="false">light</string>
    <string name="theme_black_value" translatable="false">black</string>
    <string name="setting_lang">Язык</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="lang_ua" translatable="false">Українська</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="setting_start_menu">Категория по умолчанию</string>
    <string name="setting_sort_favorite">Сортировка избранного</string>
    <string name="sort_title_date">По дате добавления</string>
    <string name="sort_title_name">По названию</string>
    <string name="sort_title_genre">По жанру</string>
    <string name="sort_title_autor">По автору</string>
    <string name="sort_title_artist">По исполнителю</string>
    <string name="sort_title_series">По серии</string>
    <string name="sort_title_saved">По загруженному</string>
    <string name="sort_value_date" translatable="false">date</string>
    <string name="sort_value_name" translatable="false">name</string>
    <string name="sort_value_genre" translatable="false">genre</string>
    <string name="sort_value_autor" translatable="false">autor</string>
    <string name="sort_value_artist" translatable="false">artist</string>
    <string name="sort_value_series" translatable="false">series</string>
    <string name="sort_value_saved" translatable="false">saved</string>
    <string name="filter">Фильтр</string>
    <string name="filter_series">Серии</string>
    <string name="pref_dowland_path">Папка для загрузок</string>
    <string name="select_folder_description">Выберите папку для загрузки</string>
    <string name="default_text">По умолчанию</string>
    <string name="select_folder">Выберите папку</string>
    <string name="confirm">Подтвердить</string>
    <string name="clear_history_search">Очистить историю поиска</string>
    <string name="confirm_clear_history_search">Вы уверены что хотите очистить историю поиска?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отмена</string>
    <string name="confirm_clear_history">Вы уверены что хотите очистить историю?</string>
    <string name="confirm_clear_favorite">Вы уверены что хотите очистить избранное?</string>
    <string name="clear_history">Очистить историю</string>
    <string name="clear_favorite">Очистить избранное</string>
    <string name="backup">Резервное копирование</string>
    <string name="backup_summary">Начать резервное копирование</string>
    <string name="restore">Восстановление</string>
    <string name="restore_summary">Начать восстановление из резервной копии</string>
    <string name="confirm_backup">Вы уверены что хотите сделать резервную копию?</string>
    <string name="confirm_restore">Вы уверены что хотите восстановить данные?</string>
    <string name="choose_file">Выберите файл</string>
    <string name="clear">Очистить</string>
    <string name="backup_created">Резервная копия создана.</string>
    <string name="backup_not_created">Не удалось создать резервную копию!</string>
    <string name="worning_not_allowed_write_storege">Приложению не было разрешено записывать данные хранилище.</string>
    <string name="restored">Данные успешно восстановлены.</string>
    <string name="error_restored">Ошибка восстановления!</string>
    <string name="permission_read_external_storage">Разрешение на чтение файлов</string>
    <string name="worning_not_allowed_read_storege">Приложению не было разрешено чиать данные с хранилища.</string>
    <string name="select">Выбрать</string>
    <string name="create">Создать</string>
    <string name="new_folder">Новая папка</string>
    <string name="folder_created">Папка создана</string>
    <string name="error_folder_create">Ошибка создания</string>
    <string name="empty_text">Пустое поле</string>
    <string name="import_favorite">Импорт избранного</string>
    <string name="import_description">Импортировать избранное с сайта</string>
    <string name="kniga_v_uhe">Книга в ухе</string>
    <string name="kniga_v_uhe_description">Импортировать с сайта \"Книга в ухе\"</string>
    <string name="action_import">Импортировать</string>
    <string name="prompt_password">Пароль</string>
    <string name="privacy">Условия использования</string>
    <string name="donate" translatable="false">Donate</string>
    <string name="donate_summary">Поддержать проект</string>
    <string name="write_autor">Написать автору</string>
    <string name="getPlus">Получить Plus версию</string>
    <string name="how_is">Что это?</string>
    <string name="MonobanckUAH" translatable="false">Monobank UAH</string>
    <string name="Monobanck" translatable="false">Monobank</string>
    <string name="MonobanckNumberUAH" translatable="false">5375 4114 0050 6411</string>
    <string name="MonobanckUSD" translatable="false">Monobank USD</string>
    <string name="MonobanckNumberUSD" translatable="false">5375 4188 0202 2079</string>
    <string name="MonobanckEUR" translatable="false">Monobank EUR</string>
    <string name="MonobanckNumberEUR" translatable="false">5375 4199 0104 6886</string>
    <string name="privat">ПриватБанк</string>
    <string name="privatNumber" translatable="false">5168 7573 6995 1399</string>
    <string name="alpha">АльфаБанк UA</string>
    <string name="alphaNumber" translatable="false">5355 5712 8204 2217</string>
    <string name="qiwi" translatable="false">QIWI</string>
    <string name="qiwiNumber" translatable="false">ONAMA629</string>
    <string name="webmoney" translatable="false">WebMoney</string>
    <string name="wmu" translatable="false">WMU</string>
    <string name="wmuNumber" translatable="false">U194698990241</string>
    <string name="wmr" translatable="false">WMR</string>
    <string name="wmrNumber" translatable="false">R412052005163</string>
    <string name="wmz" translatable="false">WMZ</string>
    <string name="wmzNumber" translatable="false">Z159651802111</string>
    <string name="wme" translatable="false">WME</string>
    <string name="wmeNumber" translatable="false">E389430023033</string>
    <string name="parental_control">Родительский контроль</string>
    <string name="yd">ЮMoney</string>
    <string name="ydNumb" translatable="false">410014301337309</string>
    <string name="yandex_form">Яндекс форма</string>
    <string name="reproduction">Воспроизведение</string>
    <string name="reproduction_desc">При открытии новой книги продолжать воспроизводить старую</string>
    <string name="autoplay">Автовоспроизведение</string>
    <string name="autoplay_desc">Запускать книги сразу после открытия</string>
    <string name="open_4pda">Открыть тему на 4pda</string>
    <string name="seekTo">Перемотка</string>
    <string name="seekToPauseDesc">Снимать плеер с паузы во время перемотки</string>
    <string name="scrollToSelected">Переход к активному файлу</string>
    <string name="scrollToSelectedDesc">Первым в списке будет стоять активный аудиофайл</string>
    <string name="offline">Офлайн</string>
    <string name="ofline_desc">Скрывать незагруженные главы из списка в офлайн режиме</string>
    <string name="battary_optimize" translatable="false">Battery Optimization</string>
    <string name="battary_optimize_desc">Проверить включен ли режим экономии заряда батареи</string>
    <string name="dir_value_emulated" translatable="false">emulated</string>
    <string name="abook" translatable="false">Akniga</string>
    <string name="izibuc">ИзиБук</string>
    <string name="audionook_mp3" translatable="false">AudioBook-mp3</string>
    <string name="baza_knig">База Книг</string>
    <string name="source">Источник</string>
    <string name="comets">Комментарии</string>
    <string name="years">Год</string>
    <string name="nav_header_subtitle">Войдите для синхронизации</string>
    <string name="login">Войти</string>
</resources>