<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/theme_dark_value"
        android:dialogTitle="@string/setting_theme"
        android:entries="@array/settings_them_titles"
        android:entryValues="@array/settings_them_values"
        android:key="pref_theme"
        android:icon="@drawable/ic_theme"
        android:title="@string/setting_theme" />

    <!--<ListPreference
        android:defaultValue="ru"
        android:dialogTitle="@string/setting_lang"
        android:entries="@array/settings_lang_titles"
        android:entryValues="@array/settings_lang_values"
        android:key="pref_lang"
        android:title="@string/setting_lang" />-->

    <ListPreference
        android:defaultValue="0"
        android:dialogTitle="@string/setting_start_menu"
        android:entries="@array/settings_start_screen_titles"
        android:entryValues="@array/settings_start_screen_values"
        android:icon="@drawable/ic_application"
        android:key="pref_start_screen"
        android:title="@string/setting_start_menu" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_web"
        android:key="offline"
        android:summary="@string/ofline_desc"
        android:title="@string/offline" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_album"
        android:key="reproductionPref"
        android:summary="@string/reproduction_desc"
        android:title="@string/reproduction" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_auto_play"
        android:key="autoPlayPref"
        android:summary="@string/autoplay_desc"
        android:title="@string/autoplay" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:icon="@drawable/ic_fast_forward_pref"
        android:key="seekToPausePref"
        android:summary="@string/seekToPauseDesc"
        android:title="@string/seekTo" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:icon="@drawable/ic_scroll_to"
        android:key="scrollToSelectedPref"
        android:summary="@string/scrollToSelectedDesc"
        android:title="@string/scrollToSelected" />

    <Preference
        android:icon="@drawable/ic_lock"
        android:key="parentalControl"
        android:title="@string/parental_control" />

    <ListPreference
        android:defaultValue="@string/sort_value_date"
        android:dialogTitle="@string/setting_sort_favorite"
        android:entries="@array/settings_sort_titles"
        android:entryValues="@array/settings_sort_values"
        android:icon="@drawable/ic_sort"
        android:key="pref_sort_favorite"
        android:title="@string/setting_sort_favorite" />

    <PreferenceScreen
        android:icon="@drawable/ic_import"
        android:key="import"
        android:persistent="true"
        android:summary="@string/import_description"
        android:title="@string/import_favorite">
        <Preference
            android:key="import_kniga_v_uhe"
            android:summary="@string/kniga_v_uhe_description"
            android:title="@string/kniga_v_uhe"/>
    </PreferenceScreen>

    <ListPreference
        android:defaultValue="@string/dir_value_emulated"
        android:dialogTitle="@string/pref_dowland_path"
        android:entries="@array/settings_dir_titles"
        android:entryValues="@array/settings_dir_values"
        android:key="pref_downland_path"
        android:title="@string/pref_dowland_path"
        android:icon="@drawable/ic_folder">

    </ListPreference>

    <Preference
        android:icon="@drawable/ic_backup"
        android:key="backup"
        android:summary="@string/backup_summary"
        android:title="@string/backup" />

    <Preference
        android:icon="@drawable/ic_restore"
        android:key="restore"
        android:summary="@string/restore_summary"
        android:title="@string/restore" />


    <PreferenceScreen
        android:icon="@drawable/ic_clear"
        android:key="clear"
        android:persistent="true"
        android:title="@string/clear">
        <Preference
            android:key="clear_history_search"
            android:title="@string/clear_history_search" />

        <Preference
            android:key="clear_history"
            android:title="@string/clear_history" />

        <Preference
            android:key="clear_favorite"
            android:title="@string/clear_favorite" />
    </PreferenceScreen>


</PreferenceScreen>