<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_audiobooks"
            android:icon="@drawable/ic_menu_audiobooks"
            android:title="@string/menu_audiobooks" />
        <item
            android:id="@+id/nav_genre"
            android:icon="@drawable/ic_menu_genre"
            android:title="@string/menu_genre" />
        <item
            android:id="@+id/nav_autor"
            android:icon="@drawable/ic_menu_autor"
            android:title="@string/menu_autor" />
        <item
            android:id="@+id/nav_artist"
            android:icon="@drawable/ic_menu_artist"
            android:title="@string/menu_artist" />
    </group>

    <group
        android:id="@+id/group_favorite"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_menu_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
    </group>

    <group
        android:id="@+id/group_secondary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>

</menu>
