<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/order"
        android:icon="@drawable/ic_sort"
        android:title="@string/order"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/source"
        android:icon="@drawable/ic_web"
        android:title="@string/source"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/source_kniga_v_uhe"
                android:title="@string/kniga_v_uhe" />
            <item
                android:id="@+id/source_izi_book"
                android:title="@string/izibuc" />
        </menu>
    </item>

</menu>